DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
[1.0 Beta 2 released - 1.18.2005]==============================================
Jan-18-2005 patrickh    NEW VERSION: 0.92.0

[1.0 Beta 1 released - 12.24.2004]=============================================
Dec-23-2004 patrickh    NEW VERSION: 0.91.0
Dec-21-2004 aronb       Refactored event input to allow more code reuse and
                        flexibility. As an effect EventWindow and
                        EventWindowProxy were renamed to KeyboardMouse and
                        KeyboardMouseProxy respectively.
                        NEW VERSION 0.22.0
Dec-01-2004 patrickh    Renamed the config element type loaded by
                        gadget::AbstractNetworkManager from machine_specific to
                        cluster_node.
                        NEW VERSION 0.21.0
Nov-13-2004 patrickh    Renamed gadget::SpeechRecogDigital* to gadget::Command*
                        and gadget::SpeechRecogString* to gadget::String*.
                        NEW VERSION 0.20.0
Nov-08-2004 dshipton    Split EventWindowXWin::openTheWindow() into
                        openLocalWindow and setupRemoteWindow and
                        added code to get size into getWindowWidthAndHeight().
Oct-18-2004 allenb      Major refactoring of EventWindow handling on X.
                        Now the X event window device can sample events
                        from "remote" windows that it did not open.
                        This uses a new window registry and works with vrj
                        to allow input from GL and Performer windows.
                        NEW VERSION 0.19.0
Oct-18-2004 allenb      Renamed Input::getBaseType to getInputTypeName.
Oct-11-2004 patrickh    Implemented version checking for device driver and
                        cluster plug-ins.  All Gadgeteer plug-ins must now